export enum KeyFingerMappingSchemeType {
  OPTIMIZED = 'optimized',
  LOGICAL = 'logical',
  CUSTOM = 'custom',
}
